[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kerati", email = "enderwolf50@gmail.com"},
]
dependencies = [
    "discord.py",
    "pymongo",
    "sentry-sdk",
    "coloredlogs",
    "pyyaml",
    "saucenao-api",
    "google-api-python-client",
    "addict",
    "dnspython",
    "python-dotenv~=0.18",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []
